...
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label Of Item" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AsQ-BS-KVQ">
                                                            <rect key="frame" x="0.0" y="0.0" width="84.5" height="27"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                            <nil key="textColor"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quantity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eTA-4V-BAT">
                                                            <rect key="frame" x="115" y="0.0" width="65" height="27"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                            <nil key="textColor"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Unit Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HWR-ey-SdO">
...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="pos-SO-bcQ" secondAttribute="trailing" id="7so-xg-mh5"/>
                            <constraint firstAttribute="bottom" secondItem="pos-SO-bcQ" secondAttribute="bottom" id="Ui6-ru-ENH"/>
                            <constraint firstItem="pos-SO-bcQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="x6O-zL-v31"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Fortis Bank" id="f99-74-44b">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="hR7-N1-e6H">
                            <connections>
                                <segue destination="wOP-wh-LBO" kind="presentation" identifier="" id="8gL-lV-39i"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
            <objects>
                <viewController storyboardIdentifier="ItemsInputViewController" id="wOP-wh-LBO" customClass="ItemsInputViewController" customModule="Fortis_Bank" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="RA7-mD-boz">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Label of item" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="arU-4j-4Wp">
                                <rect key="frame" x="20" y="111" width="374" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Quantity" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KFd-ac-J68">
                                <rect key="frame" x="20" y="176" width="374" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Price" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gCI-5N-fle">
                                <rect key="frame" x="20" y="241" width="374" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                            </textField>
                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="INW-su-aVC">
...
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M0s-03-eua">
                                <rect key="frame" x="353" y="44" width="41" height="32"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                <state key="normal" title="Done"/>
                                <connections>
                                    <action selector="DoneEntry:" destination="wOP-wh-LBO" eventType="touchUpInside" id="Wd7-gX-NHP"/>
                                    <segue destination="bYF-9v-SQj" kind="unwind" identifier="itemAddedSegue" unwindAction="doneWithSegue:" id="9jT-PI-WgC"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GSx-zk-NiL">
...
